fix(plate): 리뷰 이월 부채 정리 — 매핑 고정·프롬프트 시간순·끼니 문서화 (#33)
* test(recommendation): 신고 고민 9종의 추천 축 매핑을 고정한다

* fix(plate): 오늘의 기록을 시간순으로 프롬프트에 싣는다

* docs(plate): 끼니 라벨과 날짜 귀속이 별개임을 명시

* refactor(plate): 프롬프트 시간순을 쿼리 정렬과 분리한다